--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ set(libusb_1_FIND_REQUIRED TRUE)
 include(${PROJECT_SOURCE_DIR}/cmake/Findlibusb-1.0.cmake)
 include_directories(${LIBUSB_1_INCLUDE_DIRS})
 
-add_executable(ufctl main.cpp UltrafineDisplay.cpp UltrafineDisplay.h)
+add_executable(ufctl main.cpp UltrafineDisplay.cpp CLIHandler.cpp Globals.h UltrafineDisplay.h CLIHandler.h)
 target_link_libraries(ufctl ${LIBUSB_1_LIBRARIES} ncurses)
